--- a/railway-service/package.json
+++ b/railway-service/package.json
@@ -7,12 +7,13 @@
     "start": "node index-stable.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.9",
+    "@whiskeysockets/baileys": "^6.7.8",
     "@supabase/supabase-js": "^2.45.0",
     "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
     "redis": "^4.6.10"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "20.x"
   }
 }
