--- a/railway-service/package.json
+++ b/railway-service/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.8",
+    "@whiskeysockets/baileys": "^7.0.0-rc.6",
     "@supabase/supabase-js": "^2.45.0",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0"
